--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    background: linear-gradient(to right, #ff9a9e, #fad0c4);
 }
 
 body {
