--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html { 
-    height: 100%;
+    max-height: 100%;
     width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -10,6 +10,7 @@ html {
 body {
     margin: 60px auto;
     width: 70%;
+    max-height: 100%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
