--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html { 
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     background-size: contain;
     background-repeat: no-repeat;
