--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
 body {
     margin: 60px auto;
     width: 70%;
-    max-height: 100%;
+    height: 100%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
