--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+#li a {color: white;}
 a {
     text-decoration: none;
     color: #999;
