--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,8 @@ html {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-  background-image: url("../images/Steine.jpeg"), linear-gradient(#a1c4fd, #c2e9fb); /* W3C */
+    background-image: url("../images/Steine.jpeg"), linear-gradient(#a1c4fd, #c2e9fb); /* W3C */
+    background-size: cover;
 }
 
 body {
