--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,8 @@ div.container {
     max-height: 100%;
     background-color: rgba(255, 255, 255, 0.6);
 }
+
+div.blurb {
+    padding-left: 20px;
+    padding-right: 20px;
+}
