--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,16 @@ html {
 
 body {
     margin: 0px auto;
+    width: 100%;
+    height: 100%;
+}
+div.body {
     width: 70%;
-    height: 90%;
+    height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-image: url("../images/Steine.jpeg"), linear-gradient(white, white); /* W3C */
-    background-size: contain;
+    background-size: cover;
 }
 navi ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
