--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ navi ul, footer ul {
     list-style: none;
     font-weight: bold;
 }
-navi ul li, footer ul li {
+div.navi li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
