--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
     width: 100%;
     height: 100%;
 }
+
 div.body {
     width: 70%;
     height: 100%;
@@ -18,6 +19,19 @@ div.body {
     background-image: url("../images/Steine.jpeg"), linear-gradient(white, white); /* W3C */
     background-size: cover;
     overflow: auto;
+}
+
+@media only screen and (max-width: 1000px)  {
+div.body {
+    width: 100%;
+    height: 100%;
+    margin:auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url("../images/Steine.jpeg"), linear-gradient(white, white); /* W3C */
+    background-size: cover;
+    overflow: auto;
+}
 }
 
 div.bodymargin {
