--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,9 @@ p:first-of-type {
 p:last-of-type {
     margin-bottom: 0px;
 }
+h4:first-of-type {
+    margin-top: 0px;
+}
 footer {
     font-size: .8em;
 }
