--- a/css/main.css
+++ b/css/main.css
@@ -83,15 +83,16 @@ p {
     line-height: 1.4em;
     color: #333;
 }
-p:first-of-type {
-    margin-top: 0px;
-}
+
 p:last-of-type {
     margin-bottom: 0px;
 }
-h4:first-of-type {
+p:first-of-type, 
+h4:first-of-type, 
+h1:first-of-type {
     margin-top: 0px;
-}
+} 
+
 footer {
     font-size: .8em;
 }
